[package]
name = "reddit_score"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.2", features = [ "json" ] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
